# agentic-apps

network_of_assistants/: docker-compose-replicas.yaml  docker-compose.yaml  pyproject.toml
network_of_assistants/nginx/: nginx.conf
network_of_assistants/noa-file-assistant/: Dockerfile  main.py  pyproject.toml
network_of_assistants/noa-math-assistant/: Dockerfile  main.py  pyproject.toml
network_of_assistants/noa-moderator/: Dockerfile  main.py  pyproject.toml
network_of_assistants/noa-slim/: pyproject.toml  slim-config.yaml
network_of_assistants/noa-slim/slim/: __init__.py
network_of_assistants/noa-user-proxy/: main.py  pyproject.toml
network_of_assistants/noa-web-surfer/: llm.py  main.py  pyproject.toml
network_of_assistants/otel-collector/: otel-collector-config.yaml
